--- a/Fun Project/Dicee Game/index.html
+++ b/Fun Project/Dicee Game/index.html
@@ -12,6 +12,7 @@
   <body>
 
     <div class="container">
+      <h2>Refresh Me [ Press<span>F5</span>]</h2>
       <h1>Refresh Me</h1>
 
       <div class="dice">
